--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -30,13 +30,13 @@
       <div class="navbar-nav ms-auto">
         <a class="nav-link me-2" href="/listings/new" style="font-size: 1.06rem;">Share Your Space</a>
 
-        <% if(!currentUser){ %>
+        <% if (typeof currentUser==='undefined' || !currentUser) { %>
           <a class="nav-link" href="/signup"><b>Sign Up</b></a>
           <a class="nav-link" href="/login"><b>Login</b></a>
-          <% } %>
-            <% if(currentUser){ %>
-              <a class="nav-link" href="/logout"><b>Logout</b></a>
-              <% } %>
+          <% } else { %>
+            <a class="nav-link" href="/logout"><b>Logout</b></a>
+            <% } %>
+
       </div>
     </div>
   </div>
