--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,3 +189,116 @@ body{
 .nav-title:hover {
   transform: scale(1.2);
 }
+
+
+
+/* -------------------- MEDIA QUERIES -------------------- */
+
+@media (max-width: 576px) {
+  .navbar-nav {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .nav-link {
+    padding: 0.5rem 0;
+    font-size: 1rem !important;
+  }
+
+  .search-box {
+    width: 100% !important;
+    margin: 0 auto;
+  }
+
+  .search-div {
+    margin: 1rem 0 0 0 !important;
+    width: 100%;
+  }
+
+  .btns {
+    flex-direction: column;
+    margin: 1rem 0 !important;
+    align-items: center;
+  }
+
+  .f-info {
+    flex-direction: column;
+    height: auto;
+    padding: 1rem;
+  }
+
+  .f-info-socials i {
+    font-size: 1.2rem;
+    padding: 0 0.5rem;
+  }
+
+  .f-info-links {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .og_img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 991px) {
+  .search-box {
+    width: 100% !important;
+  }
+
+  .search-div {
+    margin-left: 0 !important;
+    margin-top: 1rem;
+  }
+
+  .btns {
+    justify-content: center;
+    margin-left: 0 !important;
+  }
+
+  .og_img {
+    width: 60%;
+  }
+
+  .f-info {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+}
+
+/* Large devices (992px and up) */
+@media (min-width: 992px) {
+  .search-box {
+    width: 25rem !important;
+  }
+
+  .search-div {
+    margin-left: 18rem;
+  }
+
+  .btns {
+    margin-left: 26rem;
+  }
+
+  .og_img {
+    width: 45%;
+  }
+}
+
+ /* responsive map styling  */
+  .responsive-map {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+    overflow: hidden;
+  }
+  .responsive-map iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
