--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,124 +1,107 @@
 <% layout("/layouts/boilerplate") %>
 
-  <div class="row mt-3">
-    <div class="col-8 offset-2">
-      <h2 class="listing-title">
-        <%= listing.title %>
-      </h2>
-    </div>
-    <div class="show-card listing-card col-6 offset-3 mt-3">
-      <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
-      <div class="card-body"><br />
-        <p class="card-text">
-        <ul>
-          <h5><i>Owned By : <%= listing.owner ? listing.owner.username : "Unknown Owner" %></i></h5>
-          <li class="mb-2">
-            <%= listing.description %>
-          </li>
-          <li class="mb-2">
-            <strong>Category:</strong>
-            <%= listing.category ? listing.category.replace("-", " ").replace(/\b\w/g, l => l.toUpperCase()) : "Not specified" %>
-          </li>
-          <li class="mb-2">&#8377; <%= listing.price.toLocaleString("en-IN") %>
-          </li>
-          <li class="mb-2">
-            <%= listing.location %>
-          </li>
-          <li class="mb-2">
-            <%= listing.country %>
-          </li>
-        </ul>
-        </p>
-      </div>
-    </div>
-    <br />
+<div class="row mt-3">
+  <div class="col-8 offset-2">
+    <h2 class="listing-title"><%= listing.title %></h2>
   </div>
 
-
-  <!-- Authorization for delete and edit -->
-  <% if(currentUser && listing.owner._id.equals(currentUser._id)) { %>
-    <div class="btns">
-      <a class="btn btn-dark col-1 offset-2 edit-btn" href="/listings/<%= listing._id %>/edit">Edit</a>
-      <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button class="btn btn-dark offset-5">Delete</button>
-      </form>
+  <div class="show-card listing-card col-6 offset-3 mt-3">
+    <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+    <div class="card-body"><br />
+      <ul>
+        <h5><i>Owned By : <%= listing.owner ? listing.owner.username : "Unknown Owner" %></i></h5>
+        <li class="mb-2"><%= listing.description %></li>
+        <li class="mb-2"><strong>Category:</strong>
+          <%= listing.category ? listing.category.replace("-", " ").replace(/\b\w/g, l => l.toUpperCase()) : "Not specified" %>
+        </li>
+        <li class="mb-2">&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
+        <li class="mb-2"><%= listing.location %></li>
+        <li class="mb-2"><%= listing.country %></li>
+      </ul>
     </div>
-    <br /><br />
-    <hr />
-    <% } %>
+  </div>
+  <br />
+</div>
+
+<!-- Authorization for delete and edit -->
+<% if (currentUser && listing.owner._id.equals(currentUser._id)) { %>
+  <div class="btns">
+    <a class="btn btn-dark col-1 offset-2 edit-btn" href="/listings/<%= listing._id %>/edit">Edit</a>
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+      <button class="btn btn-dark offset-5">Delete</button>
+    </form>
+  </div>
+  <br /><br />
+  <hr />
+<% } %>
+
+<!-- Authorization for reviews creation -->
+<% if (currentUser) { %>
+  <div class="col-8">
+    <h4 class="mb-3">Leave a Rating</h4>
+    <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
+      <div class="mb-2 mt-3">
+        <fieldset class="starability-basic">
+          <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+          <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
+      </div>
+
+      <div class="mb-3 mt-2">
+        <label for="comment" class="form-label">Comment:</label>
+        <textarea name="review[comment]" cols="30" rows="5" id="comment" class="form-control" required></textarea>
+        <div class="invalid-feedback">Please add some comments for review</div>
+      </div>
+
       <br />
+      <button class="btn btn-outline-dark">Submit</button>
+      <br /><br />
+    </form>
+  </div>
+<% } %>
 
-      <!-- //Authorization for reviews creation -->
-      <% if(currentUser) { %>
-        <div class="col-8">
-          <h4 class="mb-3">Leave a Rating</h4>
-          <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
-            <div class="mb-2 mt-3">
-              <fieldset class="starability-basic">
+<hr />
+<br />
 
-                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
-                  aria-label="No rating." />
-                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                <label for="first-rate1" title="Terrible">1 star</label>
-                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                <label for="first-rate2" title="Not good">2 stars</label>
-                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                <label for="first-rate3" title="Average">3 stars</label>
-                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                <label for="first-rate4" title="Very good">4 stars</label>
-                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                <label for="first-rate5" title="Amazing">5 stars</label>
-              </fieldset>
-
-            </div>
-
-            <div class="mb-3 mt-2">
-              <label for="comment" class="form-label">Comment:</label>
-              <textarea name="review[comment]" cols="30" rows="5" id="comment" class="form-control" required></textarea>
-              <div class="invalid-feedback">Please add some comments for review</div>
-            </div>
-
-            <br />
-            <button class="btn btn-outline-dark">Submit</button>
-            <br />
-            <br />
-          </form>
+<% if (listing.reviews.length > 0) { %>
+  <div class="row">
+    <h5><b>All Reviews</b></h5><br /><br />
+    <% for (review of listing.reviews) { %>
+      <div class="card col-5 ms-3 mb-5">
+        <div class="card-body"><br />
+          <h5 class="card-title">@<%= review.author ? review.author.username : "Unknown User" %></h5>
+          <p class="card-text"><%= review.comment %></p>
+          <p class="starability-result card-text mb-3" data-rating="<%= review.rating %>"></p>
         </div>
-        <% } %>
+        <form class="mt-2 mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
+      </div>
+    <% } %>
+  </div>
+<% } %>
 
-          <hr />
-          <br />
+<!-- Google Map Embed Section -->
+<div class="col-10 mb-3 mt-3">
+  <h3>Where You'll Be:</h3>
+  <div class="offset-1 mb-4 mt-3 responsive-map">
+    <iframe
+      id="map-frame"
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+      src="https://www.google.com/maps?q=<%= encodeURIComponent(listing.location + ', ' + listing.country) %>&output=embed">
+    </iframe>
+  </div>
+</div>
 
-
-          <% if(listing.reviews.length>0 ) { %>
-            <div class="row">
-              <h5><b>All Reviews</b></h5><br /><br />
-              <% for(review of listing.reviews) { %>
-                <div class="card col-5 ms-3 mb-5">
-                  <div class="card-body">
-                    <br />
-                    <h5 class="card-title">@<%= review.author ? review.author.username : "Unknown User" %>
-                    </h5>
-                    <p class="card-text">
-                      <%= review.comment %>
-                    </p>
-                    <p class="starability-result card-text mb-3" data-rating="<%= review.rating %>"></p>
-                  </div>
-                  <form class=" mt-2 mb-3" method="POST"
-                    action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
-                    <button class="btn btn-sm btn-dark">Delete</button>
-                  </form>
-                </div>
-                <% } %>
-            </div>
-            <% } %>
-
-              <div class="col-10 mb-3 mt-3">
-                <h3>Where You'll Be:</h3>
-                <div id="map" style="height: 400px; " class=" offset-1 mb-4 mt-3"></div>
-              </div>
-
-              <script>
-                const lat = 34.0259;
-                const lng = -118.7798;
-              </script>
